# scheduling-automator

./: .gitignore  docker-compose.yml
scheduling-app/: Cargo.toml
scheduling-domain/: Cargo.toml
scheduling-domain/src/: lib.rs
scheduling-infrastructure/: Cargo.toml
scheduling-infrastructure/migrations/2018-12-21-204442_create_customers_and_account_types/: down.sql  up.sql
scheduling-infrastructure/src/: connection.rs  lib.rs  schema.rs  seed.rs
scheduling-infrastructure/src/customer_accounts/: mock.rs  mod.rs  repository.rs
scheduling-infrastructure/src/models/: customer_account.rs  customer_account_type.rs  mod.rs
scheduling-infrastructure/tests/: common.rs  customer_accounts_test.rs  mod.rs
scripts/: env.sh  generate-composer.sh  remove-env.sh
scripts/db/: data.sh  init.sh  seed.sql
scripts/templates/: template.development.yml  template.production.yml  template.testing.yml
